--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,7 +2,7 @@
 <view class="detai-crol"><f-ctrol titles="{{tabControl}}" bind:itemclick="itemclick"/></view>
 <!-- 商品轮播图 -->
 <swiper class="swiper" autoplay indicator-dots circular interval="2000">
-    <swiper-item wx:for="{{topImg}}" wx:key="index">
+    <swiper-item wx:for="{{Goods.data.result.itemInfo.topImages}}" wx:key="index">
      <navigator>
        <image src="{{item}}" mode="aspectFill" class="img"></image>     
      </navigator>
@@ -10,38 +10,38 @@
 </swiper>
 <!-- 商品描述 -->
 <view class="goods">
-  <view class="g-title">{{title}}</view>
+  <view class="g-title">{{Goods.data.result.itemInfo.title}}</view>
   <view class="price">
-    <text class="newprice">￥{{newprice}}</text>
-    <text class="oldprice">{{oldprice}}</text>
+    <text class="newprice">￥{{Goods.data.result.itemInfo.lowNowPrice}}</text>
+    <text class="oldprice">{{Goods.data.result.itemInfo.oldPrice}}</text>
   </view>
-  <block wx:for="{{columns}}" wx:key="index">
+  <block wx:for="{{Goods.data.result.columns}}" wx:key="index">
     <text class="info">{{item}}</text>
   </block>
   <view class="zw"></view>
   <view>
-    <block wx:for="{{services}}" wx:key="index">
+    <block wx:for="{{Goods.data.result.shopInfo.services}}" wx:key="index">
       <image class="s-icon" src="{{item.icon}}"></image>
       <text class="s-info">{{item.name}}</text>
     </block>
   </view> 
   <view class="dianpu">
-    <image src="{{shopLogo}}" class="logo"></image>
-    <text class="l-name">{{name}}</text>
+    <image src="{{Goods.data.result.shopInfo.shopLogo}}" class="logo"></image>
+    <text class="l-name">{{Goods.data.result.shopInfo.name}}</text>
   </view>
   <view class="b-goods">
     <view class="b-left">
       <view class="g-info">
-        <view>{{cSells}}件</view>
+        <view>{{Goods.data.result.shopInfo.cSells}}件</view>
         <view class="fz">总销量</view>
       </view>
       <view>
-        <view>{{cGoods}}</view>
+        <view>{{Goods.data.result.shopInfo.cGoods}}</view>
         <view class="fz">全部宝贝</view>
       </view>
     </view>
     <view class="b-right">
-      <block wx:for="{{score}}" wx:key="name">
+      <block wx:for="{{Goods.data.result.shopInfo.score}}" wx:key="name">
         <view class="scro">
          <view>{{item.name}}</view>
          <view>{{item.score}}</view>
@@ -53,13 +53,13 @@
 </view>
 <view class="clear-fix info-desc">
   <view class="star"></view>
-  <view class="desc">{{desc}}</view>
+  <view class="desc">{{Goods.data.result.detailInfo.desc}}</view>
   <view class="end"></view>
 </view>
 
 <!-- 商品详情 -->
 <view>
-  <block wx:for="{{detaiimg}}" wx:key="index">
+  <block wx:for="{{Goods.data.result.detailInfo.detailImage}}" wx:key="index">
     <text class="key">{{item.key}}</text>
     <block wx:for="{{item.list}}" wx:key="index"> 
       <image class="detaiimg" src="{{item}}" mode="widthFix"></image>
